@@ -1553,19 +1553,8 @@ class AppView(gtk.TreeView):
 
     def _on_transaction_finished(self, backend, result, tr):
         """ callback when an application install/remove transaction has finished """
-        
-        # If this item has just been removed...
-        try:
-            pkgname = result.meta_data["sc_pkgname"]
-        except KeyError:
-            return
-        appname = result.meta_data.get("sc_appname", "")
-        db = self.get_model().db
-        appdetails = Application(appname, pkgname).get_details(db)
-        # ...then manually emit "cursor-changed" as an item has
-        # just been removed and so everything else needs to update
+        # need to send a cursor-changed so the row button is properly updated
         self.emit("cursor-changed")
-        
         # remove pkg from the block list
         self._check_remove_pkg_from_blocklist(result.pkgname)
 
